tests/errors/surf_sw_02.experr
a switch can have only one 'default'
